# new_year_bot

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
.circleci/: config.yml
src/: bot.py  conv_handlers.py  set_commands.py  states.py
src/data/: data.py  texts.json
src/db_functions/: __init__.py  _admin.py  _registration.py
src/handlers/: admin.py  gsheets.py  handlers.py
src/hegai_db/models/: __init__.py  base.py  db_models.py
